--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,9 @@ body {
   .container {
     @apply w-[1140px] mx-auto;
   }
+  .container2 {
+    @apply w-[500px] mx-auto;
+  }
 }
 
 @layer base {
